uipaike0226+胡梦+官网部分效果实现

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 <!--嵌套部分-->
 <div class="qt-block">
     <div id="zero">
-        <iframe id="ifr1a" name="ifr1a" style="width:100%;height: 500px;" onload="this.height=ifr1a.document.body.scrollHeight" src="easyui_xpp/ZB_1a0.html" frameborder="0"></iframe>
+        <iframe id="ifr1a" name="ifr1a" style="width:100%;" onload="this.height=ifr1a.document.body.scrollHeight" src="easyui_xpp/ZB_1a0.html" frameborder="0"></iframe>
     </div>
     <div id="one1">
-        <iframe id="ifr1ac" name="ifr1ac" style="width:100%;height: 500px;" onload="this.height=ifr1ac.document.body.scrollHeight" src="easyui_xpp/ZB_1a0.html" frameborder="0"></iframe>
+        <iframe id="ifr1ac" name="ifr1ac" style="width:100%;" onload="this.height=ifr1ac.document.body.scrollHeight" src="easyui_xpp/ZB_1a0.html" frameborder="0"></iframe>
     </div>
     <div id="one">
-        <iframe id="ifr1a0" name="ifr1a0" style="width:100%;height: 500px;" onload="this.height=ifr1a0.document.body.scrollHeight" src="easyui_xpp/ZB_1a1.html" frameborder="0"></iframe>
+        <iframe id="ifr1a0" name="ifr1a0" style="width:100%;" onload="this.height=ifr1a0.document.body.scrollHeight" src="easyui_xpp/ZB_1a1.html" frameborder="0"></iframe>
     </div>
     <div id="two1">
         <iframe id="ifr1a1" name="ifr1a1" style="width:100%;" onload="this.height=ifr1a1.document.body.scrollHeight"  frameborder="0"></iframe>
