--- a/easyui_xpp/ZB_1a0.html
+++ b/easyui_xpp/ZB_1a0.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页</title>
     <script type="text/javascript" src="../easyui_xpp/jquery-easyui-136/jquery.min.js"></script>
     <link href="../js/bootstrap.min.css" rel="stylesheet">
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <link href="../HMcode_QD/HMcss/main.css" rel="stylesheet">
+    <link href="../HMcode_QD/HMcss/ZB_1a0.css" rel="stylesheet">
 </head>
 <body>
 
 <!--S--轮播-->
 <div id="myCarousel" class="carousel slide">
+    <a href="#" class="btn-zx">立即咨询</a>
     <!-- 轮播（Carousel）指标 -->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -38,10 +40,168 @@
 </div>
 
 <!--E--轮播-->
+<!--S--在线课堂简介-->
+<div class="online">
+    <h2>树袋在线课堂</h2>
+    <p>— 释放效率  高效学习 —</p>
+    <div class="online-main">
+        <ul class="online-txt">
+            <li class="fir">
+                <img class="img-dd" src="../HMcode_QD/HMimages/img-bq.png">
+                <p>这里是文字效果展示</p>
+            </li>
+            <li class="sec">
+                <img class="img-dd" src="../HMcode_QD/HMimages/img-bq.png">
+                <p>这里是文字效果展示</p>
+            </li>
+        </ul>
+    </div>
+</div>
+<!--E--在线课堂简介-->
+<!--S--预约试听-->
+<div class="appoint">
+    这里是在线试听部分的步骤
+</div>
+<!--E--预约试听-->
+<!--S--课程介绍-->
+<div class="course-box">
+    <h2>国际k12课程体系全覆盖</h2>
+    <p>— 个性化定制 精准提高 定向突破 —</p>
+    <div class="tab-con">
+        <ul class="tab-tit">
+            <li class="cur">IGCSE</li>
+            <li>A-Level</li>
+            <li>IB</li>
+            <li>Ap</li>
+            <li>美高</li>
+        </ul>
+        <div class="tab-main">
+            <div class="tab-item" style="display: block">
+                <p>“这里是课程简介IGCSE”</p>
+                <ul class="item-m">
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
+                </ul>
+            </div>
+            <div class="tab-item">
+                <p>“这里是课程简介A-Level”</p>
+                <ul class="item-m">
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
+                </ul>
+            </div>
+            <div class="tab-item">
+                <p>“这里是课程简介IB”</p>
+                <ul class="item-m">
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
+                </ul>
+            </div>
+            <div class="tab-item">
+                <p>“这里是课程简介Ap”</p>
+                <ul class="item-m">
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
+                </ul>
+            </div>
+            <div class="tab-item">
+                <p>“这里是课程简介美高”</p>
+                <ul class="item-m">
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
+                </ul>
+            </div>
+        </div>
+        <a class="link-m" href="#">+了解更多课程信息</a>
+    </div>
+</div>
+<!--E--课程介绍-->
+<!--S--国际备考-->
+<div class="inter-bk">
+    <h2>国际学校备考，一站式解决方案</h2>
+    <ul class="bk-con">
+        <li>根据学生情况<br>确定意向学校</li>
+        <li>参加备考课程<br>定制课程规划</li>
+        <li>全程跟踪服务<br>确保成绩达标</li>
+        <li>参加入学考试<br>正式就读学校</li>
+    </ul>
+    <a class="link-m" href="#">+了解更多课程信息</a>
+</div>
+<!--E--国际备考-->
+<!--S--老师介绍-->
+<div class="teacher-box">
+    <h2>实力派名师 学员一致好评</h2>
+    <p>— 好成绩，从选择好老师开始 —</p>
+    <div class="tea-intro">
+        <div class="intro-item fir">
+            <div class="intro-tit">这里是图片介绍1</div>
+            <div class="intro-det">
+                <p>这里是一些文字介绍</p>
+            </div>
+        </div>
+        <div class="intro-item sec">
+            <div class="intro-tit">这里是图片介绍2</div>
+            <div class="intro-det">
+                <p>这里是一些文字介绍</p>
+            </div>
+        </div>
+        <div class="intro-item thr">
+            <div class="intro-tit">这里是图片介绍3</div>
+            <div class="intro-det">
+                <p>这里是一些文字介绍</p>
+            </div>
+        </div>
+        <div class="intro-item four">
+            <div class="intro-tit">这里是图片介绍4</div>
+            <div class="intro-det">
+                <p>这里是一些文字介绍</p>
+            </div>
+        </div>
+        <div class="intro-item five">
+            <div class="intro-tit">这里是图片介绍5</div>
+            <div class="intro-det" style="display: block">
+                <p>这里是一些文字介绍</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--E--老师介绍-->
 </body>
 </html>
 <script>
-    $('.carousel').carousel({
-        interval: 2000
+    $(function(){
+        /*轮播图*/
+        $('.carousel').carousel({
+            interval: 2000
+        });
+        /*tab切换*/
+        $('.tab-tit li').hover(function(){
+            var divC = $('.tab-main .tab-item');
+            var liC = $('.tab-tit li');
+            var eqC = $(this).index();
+            divC.css("display","none");
+            liC.removeClass("cur");
+            $(this).addClass("cur");
+            divC.eq(eqC).css("display","block");
+        });
+        /*老师样式切换*/
+        $('.tea-intro .intro-item').click(function(){
+            $('.intro-item .intro-det').css("display","none");
+            $(this).find(".intro-det").css("display","block");
+            $('.tea-intro .intro-item').animate({"marginRight":"0"},0.5);
+            $(this).animate({"marginRight":"190px"},0.5);
+        });
+        /*课堂简介图片抖动效果*/
+        $(".online-txt li").hover(function(){
+            $(this).find(".img-dd").addClass("add_transform");
+        },function () {
+            $(this).find(".img-dd").removeClass("add_transform");
+        });
     });
+
 </script>
