--- a/index.html
+++ b/index.html
@@ -105,6 +105,25 @@
         <iframe id="ifr1a4" name="ifr1a4"  style="width:100%;" onload="this.height=ifr1a4.document.body.scrollHeight"   frameborder="0"></iframe>
     </div>
 </div>
+<!--S--底部-->
+<div class="footer">
+    <div class="footer-con">
+        <div class="footer-txt">
+            <ul>
+                <li><a href="#">关于我们</a> </li>
+                <li><a href="#">联系我们</a> </li>
+                <li><a href="#">加入我们</a> </li>
+            </ul>
+            <p>400-1798-499</p>
+            <p>@296.shudailaoshi.com.All rights </p>
+            <p>沪ICxxxxxx号</p>
+        </div>
+        <div class="footer-ewm">
+            <p>树袋老师二维码</p>
+        </div>
+    </div>
+</div>
+<!--E--底部-->
 </body>
 
 </html>
