--- a/easyui_xpp/ZB_1a0.html
+++ b/easyui_xpp/ZB_1a0.html
@@ -6,13 +6,48 @@
     <script type="text/javascript" src="../easyui_xpp/jquery-easyui-136/jquery.min.js"></script>
     <link href="../js/bootstrap.min.css" rel="stylesheet">
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../HMcode_QD/HMjs/wow.min.js"></script>
+    <link href="../HMcode_QD/HMcss/animate.min.css" rel="stylesheet">
     <link href="../HMcode_QD/HMcss/main.css" rel="stylesheet">
     <link href="../HMcode_QD/HMcss/ZB_1a0.css" rel="stylesheet">
+    <script>
+        $(window).load(function(){
+            $('#myCarousel').addClass("fadeInRight");
+            $('.online').delay(1000).addClass("fadeInUp");
+        });
+        $(document).ready(function () {
+            var online =  $('.online').offset().top;
+            var appoint =  $('.appoint').offset().top;
+            var course =  $('.course-box').offset().top;
+            var inter =  $('.inter-bk').offset().top;
+            var teacher = $('.teacher-box').offset().top;
+            var record =  $('.record-zj').offset().top;
+            var wH = $(window).height();
+            $(window).scroll(function(){
+                var oWinSrcHei = $(window).scrollTop();
+                if ((oWinSrcHei + 400)>online) {
+                    $('.appoint').addClass('fadeInLeft');
+                }
+                if ((oWinSrcHei + 450)>appoint) {
+                    $('.course-box').addClass('fadeInRight');
+                }
+                if ((oWinSrcHei + 400)>course) {
+                    $('.inter-bk').addClass('fadeInUp');
+                }
+                if ((oWinSrcHei + 450)>inter) {
+                    $('.teacher-box').addClass('fadeInDown');
+                }
+                if ((oWinSrcHei + 400)>teacher) {
+                    $('.record-zj').addClass('fadeInUp');
+                }
+            });
+
+        });
+    </script>
 </head>
 <body>
-
 <!--S--轮播-->
-<div id="myCarousel" class="carousel slide">
+<div id="myCarousel" class="animated fadeInUp carousel slide">
     <a href="#" class="btn-zx">立即咨询</a>
     <!-- 轮播（Carousel）指标 -->
     <ol class="carousel-indicators">
@@ -38,10 +73,9 @@
     <a class="carousel-control right" href="#myCarousel"
        data-slide="next">&rsaquo;</a>
 </div>
-
 <!--E--轮播-->
 <!--S--在线课堂简介-->
-<div class="online">
+<div class="animated online">
     <h2>树袋在线课堂</h2>
     <p>— 释放效率  高效学习 —</p>
     <div class="online-main">
@@ -59,12 +93,12 @@
 </div>
 <!--E--在线课堂简介-->
 <!--S--预约试听-->
-<div class="appoint">
+<div class="animated appoint">
     这里是在线试听部分的步骤
 </div>
 <!--E--预约试听-->
 <!--S--课程介绍-->
-<div class="course-box">
+<div class="animated course-box">
     <h2>国际k12课程体系全覆盖</h2>
     <p>— 个性化定制 精准提高 定向突破 —</p>
     <div class="tab-con">
@@ -122,7 +156,7 @@
 </div>
 <!--E--课程介绍-->
 <!--S--国际备考-->
-<div class="inter-bk">
+<div class="animated inter-bk">
     <h2>国际学校备考，一站式解决方案</h2>
     <ul class="bk-con">
         <li>根据学生情况<br>确定意向学校</li>
@@ -134,7 +168,7 @@
 </div>
 <!--E--国际备考-->
 <!--S--老师介绍-->
-<div class="teacher-box">
+<div class="animated teacher-box">
     <h2>实力派名师 学员一致好评</h2>
     <p>— 好成绩，从选择好老师开始 —</p>
     <div class="tea-intro">
@@ -173,7 +207,7 @@
 </div>
 <!--E--老师介绍-->
 <!--S--战绩榜-->
-<div class="record-zj">
+<div class="animated record-zj">
     <h2>树袋学员战绩榜</h2>
     <p>— 让你变得比你想象中的更优秀 —</p>
     <div class="tab-tab">
@@ -255,6 +289,7 @@
     <a href="#" class="link-m">+查看更多学员分员</a>
 </div>
 <!--E--战绩榜-->
+<a href="#" class="back-to-top"></a>
 </body>
 </html>
 <script>
@@ -298,4 +333,20 @@
         });
     });
 
+</script>
+<script>
+    $(document).ready(function () {
+        $(window).scroll(function() {
+            if ($(this).scrollTop() > 100) {
+                $('.back-to-top').fadeIn('slow');
+            } else {
+                $('.back-to-top').fadeOut('slow');
+            }
+        });
+        $('.back-to-top').click(function(){
+            $('html, body').animate({scrollTop : 0},1500, 'easeInOutExpo');
+            return false;
+        });
+        new WOW().init();
+    });
 </script>
