uipaike0228+胡梦+官网调整

--- a/easyui_xpp/ZB_1a0.html
+++ b/easyui_xpp/ZB_1a0.html
@@ -103,17 +103,17 @@
             <div class="tab-item">
                 <p>“这里是课程简介Ap”</p>
                 <ul class="item-m">
-                    <li>辅助学科：学科一  学科二  学科三</li>
-                    <li>课程特点：特点一  特点二  特点三</li>
-                    <li>适合学生：学生一  学生二  学生三</li>
+                    <li>辅助学科1：学科一  学科二  学科三</li>
+                    <li>课程特点1：特点一  特点二  特点三</li>
+                    <li>适合学生1：学生一  学生二  学生三</li>
                 </ul>
             </div>
             <div class="tab-item">
                 <p>“这里是课程简介美高”</p>
                 <ul class="item-m">
-                    <li>辅助学科：学科一  学科二  学科三</li>
-                    <li>课程特点：特点一  特点二  特点三</li>
-                    <li>适合学生：学生一  学生二  学生三</li>
+                    <li>辅助学科2：学科一  学科二  学科三</li>
+                    <li>课程特点2：特点一  特点二  特点三</li>
+                    <li>适合学生2：学生一  学生二  学生三</li>
                 </ul>
             </div>
         </div>
@@ -266,7 +266,7 @@
         });
         /*课程体系tab切换*/
         $('.tab-tit li').hover(function(){
-            var divC = $('.tab-all .tab-item');
+            var divC = $('.tab-main .tab-item');
             var liC = $('.tab-tit li');
             var eqC = $(this).index();
             divC.css("display","none");
