--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link   rel="stylesheet" type="text/css" href="easyui_xpp/jquery-easyui-136/themes/icon.css"/>
     <link href="js/bootstrap.min.css" rel="stylesheet">
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="HMcode_QD/HMjs/less.min.js" type="text/javascript"></script>
     <link href="HMcode_QD/HMcss/main.css" rel="stylesheet">
     <style>
         .qt-block>div{
