--- a/easyui_xpp/ZB_1a0.html
+++ b/easyui_xpp/ZB_1a0.html
@@ -9,94 +9,130 @@
     <script type="text/javascript" src="../easyui_xpp/DataTables/datatables.js"></script>
     <link href="../js/bootstrap.min.css" rel="stylesheet">
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="../HMcode_QD/HMjs/jump.js" type="text/javascript"></script>
     <script src="../HMcode_QD/HMjs/echarts.min.js"></script>
+    <script src="../HMcode_QD/HMjs/wow.min.js"></script>
     <link href="../HMcode_QD/HMcss/animate.min.css" rel="stylesheet">
     <link href="../HMcode_QD/HMcss/main.css" rel="stylesheet">
     <link href="../HMcode_QD/HMcss/ZB_1a0.css" rel="stylesheet">
     <script>
-            $(document).ready(function() {
-                $.fn.dataTable.ext.errMode = 'none';
-                $('#table_id_ex1').DataTable( {
-                    bAutoWidth:false,
-                    "bLengthChange":false,
-                    searching:false,
-                    "paging": false,
-                    info:false,
-                    bSort:true,
-                    language: {
-                        "sProcessing": "处理中...",
-                        "sLengthMenu": "显示 _MENU_ 项结果",
-                        "sZeroRecords": "没有匹配结果",
-                        "sInfo": "共 _TOTAL_ 项",
-                        "sInfoEmpty": "共 0 项",
-                        "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
-                        "sInfoPostFix": "",
-                        "sSearch": "搜索:",
-                        "sUrl": "",
-                        "sEmptyTable": "表中数据为空",
-                        "sLoadingRecords": "载入中...",
-                        "sInfoThousands": ",",
-                        "oPaginate": {
-                            "sFirst": "首页",
-                            "sPrevious": "上页",
-                            "sNext": "下页",
-                            "sLast": "末页"
-                        },
-                        "oAria": {
-                            "sSortAscending": ": 以升序排列此列",
-                            "sSortDescending": ": 以降序排列此列"
-                        }
-                    },//国际化语言结束
-                    destroy:true,//表示可重复加载
-                    "ajax": "../HMcode_QD/HMjs/table_id_ex1.json",
-                    "columns": [
-                        { "data": "name" },
-                        { "data": "score" },
-                        { "data": "time" }
-                    ]
-                } );
-                $('#table_id_ex2').DataTable( {
-                    bAutoWidth:false,
-                    "bLengthChange":false,
-                    searching:false,
-                    "paging": false,
-                    info:false,
-                    bSort:true,
-                    language: {
-                        "sProcessing": "处理中...",
-                        "sLengthMenu": "显示 _MENU_ 项结果",
-                        "sZeroRecords": "没有匹配结果",
-                        "sInfo": "共 _TOTAL_ 项",
-                        "sInfoEmpty": "共 0 项",
-                        "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
-                        "sInfoPostFix": "",
-                        "sSearch": "搜索:",
-                        "sUrl": "",
-                        "sEmptyTable": "表中数据为空",
-                        "sLoadingRecords": "载入中...",
-                        "sInfoThousands": ",",
-                        "oPaginate": {
-                            "sFirst": "首页",
-                            "sPrevious": "上页",
-                            "sNext": "下页",
-                            "sLast": "末页"
-                        },
-                        "oAria": {
-                            "sSortAscending": ": 以升序排列此列",
-                            "sSortDescending": ": 以降序排列此列"
-                        }
-                    },//国际化语言结束
-                    destroy:true,//表示可重复加载
-                    "ajax": "../HMcode_QD/HMjs/table_id_ex2.json",
-                    "columns": [
-                        { "data": "name" },
-                        { "data": "score" },
-                        { "data": "time" }
-                    ]
-                } );
-            } );
+        $(window).load(function(){
+            $('#myCarousel').addClass("fadeInRight");
+            $('.online').delay(1000).addClass("fadeInUp");
+        });
+        $(document).ready(function () {
+            var online =  $('.online').offset().top;
+            var appoint =  $('.appoint').offset().top;
+            var course =  $('.course-box').offset().top;
+            var inter =  $('.inter-bk').offset().top;
+            var teacher = $('.teacher-box').offset().top;
+            var record =  $('.record-zj').offset().top;
+            var wH = $(window).height();
+            $(window).scroll(function(){
+                var oWinSrcHei = $(window).scrollTop();
+                if ((oWinSrcHei + 400)>online) {
+                    $('.appoint').addClass('fadeInLeft');
+                }
+                if ((oWinSrcHei + 450)>appoint) {
+                    $('.course-box').addClass('fadeInRight');
+                }
+                if ((oWinSrcHei + 400)>course) {
+                    $('.inter-bk').addClass('fadeInUp');
+                }
+                if ((oWinSrcHei + 450)>inter) {
+                    $('.teacher-box').addClass('fadeInDown');
+                }
+                if ((oWinSrcHei + 400)>teacher) {
+                    $('.record-zj').addClass('fadeInUp');
+                }
+            });
+
+        });
     </script>
-</head> 
+    <script>
+        $(document).ready(function() {
+            $.fn.dataTable.ext.errMode = 'none';
+            $('#table_id_ex1').DataTable( {
+                bAutoWidth:false,
+                "bLengthChange":false,
+                searching:false,
+                "paging": false,
+                info:false,
+                bSort:true,
+                language: {
+                    "sProcessing": "处理中...",
+                    "sLengthMenu": "显示 _MENU_ 项结果",
+                    "sZeroRecords": "没有匹配结果",
+                    "sInfo": "共 _TOTAL_ 项",
+                    "sInfoEmpty": "共 0 项",
+                    "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+                    "sInfoPostFix": "",
+                    "sSearch": "搜索:",
+                    "sUrl": "",
+                    "sEmptyTable": "表中数据为空",
+                    "sLoadingRecords": "载入中...",
+                    "sInfoThousands": ",",
+                    "oPaginate": {
+                        "sFirst": "首页",
+                        "sPrevious": "上页",
+                        "sNext": "下页",
+                        "sLast": "末页"
+                    },
+                    "oAria": {
+                        "sSortAscending": ": 以升序排列此列",
+                        "sSortDescending": ": 以降序排列此列"
+                    }
+                },//国际化语言结束
+                destroy:true,//表示可重复加载
+                "ajax": "../HMcode_QD/HMjs/table_id_ex1.json",
+                "columns": [
+                    { "data": "name" },
+                    { "data": "score" },
+                    { "data": "time" }
+                ]
+            } );
+            $('#table_id_ex2').DataTable( {
+                bAutoWidth:false,
+                "bLengthChange":false,
+                searching:false,
+                "paging": false,
+                info:false,
+                bSort:true,
+                language: {
+                    "sProcessing": "处理中...",
+                    "sLengthMenu": "显示 _MENU_ 项结果",
+                    "sZeroRecords": "没有匹配结果",
+                    "sInfo": "共 _TOTAL_ 项",
+                    "sInfoEmpty": "共 0 项",
+                    "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+                    "sInfoPostFix": "",
+                    "sSearch": "搜索:",
+                    "sUrl": "",
+                    "sEmptyTable": "表中数据为空",
+                    "sLoadingRecords": "载入中...",
+                    "sInfoThousands": ",",
+                    "oPaginate": {
+                        "sFirst": "首页",
+                        "sPrevious": "上页",
+                        "sNext": "下页",
+                        "sLast": "末页"
+                    },
+                    "oAria": {
+                        "sSortAscending": ": 以升序排列此列",
+                        "sSortDescending": ": 以降序排列此列"
+                    }
+                },//国际化语言结束
+                destroy:true,//表示可重复加载
+                "ajax": "../HMcode_QD/HMjs/table_id_ex2.json",
+                "columns": [
+                    { "data": "name" },
+                    { "data": "score" },
+                    { "data": "time" }
+                ]
+            } );
+        } );
+    </script>
+</head>
 <body>
 <!--S--轮播-->
 <div id="myCarousel" class="animated fadeInUp carousel slide">
@@ -120,18 +156,16 @@
         </div>
     </div>
     <!-- 轮播（Carousel）导航 -->
-    <a class="carousel-control left" href="#myCarousel"
-       data-slide="prev">&lsaquo;</a>
-    <a class="carousel-control right" href="#myCarousel"
-       data-slide="next">&rsaquo;</a>
+    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 <!--E--轮播-->
 <!--S--在线课堂简介-->
 <div class="animated online">
     <h2>树袋在线课堂</h2>
     <p>— 释放效率  高效学习 —</p>
-    <div class="online-main">
-        <ul class="online-txt">
+    <div class="online-main img_box">
+        <ul class="online-txt" id="ul">
             <li class="fir">
                 <img class="img-dd" src="../HMcode_QD/HMimages/img-bq.png">
                 <p>这里是文字效果展示</p>
@@ -165,41 +199,41 @@
             <div class="tab-item" style="display: block">
                 <p>“这里是课程简介IGCSE”</p>
                 <ul class="item-m">
-                    <li>辅助学科：IGCSE学科一  IGCSE学科二  IGCSE学科三</li>
-                    <li>课程特点：IGCSE特点一 IGCSE特点二  IGCSE特点三</li>
-                    <li>适合学生：IGCSE学生一  IGCSE学生二  IGCSE学生三</li>
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
                 </ul>
             </div>
             <div class="tab-item">
                 <p>“这里是课程简介A-Level”</p>
                 <ul class="item-m">
-                    <li>辅助学科：A-Level学科一  A-Level学科二  A-Level学科三</li>
-                    <li>课程特点：A-Level特点一  A-Level特点二  A-Level特点三</li>
-                    <li>适合学生：A-Level学生一  A-Level学生二  A-Level学生三</li>
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
                 </ul>
             </div>
             <div class="tab-item">
                 <p>“这里是课程简介IB”</p>
                 <ul class="item-m">
-                    <li>辅助学科：IB学科一  IB学科二  IB学科三</li>
-                    <li>课程特点：IB特点一  IB特点二  IB特点三</li>
-                    <li>适合学生：IB学生一  IB学生二  IB学生三</li>
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
                 </ul>
             </div>
             <div class="tab-item">
                 <p>“这里是课程简介Ap”</p>
                 <ul class="item-m">
-                    <li>辅助学科：Ap学科一  Ap学科二  Ap学科三</li>
-                    <li>课程特点：Ap特点一  Ap特点二  Ap特点三</li>
-                    <li>适合学生：Ap学生一  Ap学生二  Ap学生三</li>
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
                 </ul>
             </div>
             <div class="tab-item">
                 <p>“这里是课程简介美高”</p>
                 <ul class="item-m">
-                    <li>辅助学科：美高学科一  美高学科二  美高学科三</li>
-                    <li>课程特点：美高特点一  美高特点二  美高特点三</li>
-                    <li>适合学生：美高学生一  美高学生二  美高学生三</li>
+                    <li>辅助学科：学科一  学科二  学科三</li>
+                    <li>课程特点：特点一  特点二  特点三</li>
+                    <li>适合学生：学生一  学生二  学生三</li>
                 </ul>
             </div>
         </div>
@@ -207,6 +241,18 @@
     </div>
 </div>
 <!--E--课程介绍-->
+<!--S--国际备考-->
+<!--<div class="animated inter-bk">
+    <h2>国际学校备考，一站式解决方案</h2>
+    <ul class="bk-con">
+        <li>根据学生情况<br>确定意向学校</li>
+        <li>参加备考课程<br>定制课程规划</li>
+        <li>全程跟踪服务<br>确保成绩达标</li>
+        <li>参加入学考试<br>正式就读学校</li>
+    </ul>
+    <a class="link-m" href="#">+了解更多课程信息</a>
+</div>-->
+<!--E--国际备考-->
 <!--S--国际备考-->
 <div class="animated inter-bk">
     <h2>国际学校备考，一站式解决方案</h2>
@@ -220,32 +266,32 @@
     <p>— 好成绩，从选择好老师开始 —</p>
     <div class="tea-intro">
         <div class="intro-item fir">
-            <div class="intro-tit">这里是图片介绍1</div>
-            <div class="intro-det">
+            <div class="intro-tit fold">这里是图片介绍1</div>
+            <div class="intro-det unfold">
                 <p>这里是一些文字介绍</p>
             </div>
         </div>
         <div class="intro-item sec">
-            <div class="intro-tit">这里是图片介绍2</div>
-            <div class="intro-det">
+            <div class="intro-tit fold">这里是图片介绍2</div>
+            <div class="intro-det unfold">
                 <p>这里是一些文字介绍</p>
             </div>
         </div>
         <div class="intro-item thr">
-            <div class="intro-tit">这里是图片介绍3</div>
-            <div class="intro-det">
+            <div class="intro-tit fold">这里是图片介绍3</div>
+            <div class="intro-det unfold">
                 <p>这里是一些文字介绍</p>
             </div>
         </div>
         <div class="intro-item four">
-            <div class="intro-tit">这里是图片介绍4</div>
-            <div class="intro-det">
+            <div class="intro-tit fold">这里是图片介绍4</div>
+            <div class="intro-det unfold">
                 <p>这里是一些文字介绍</p>
             </div>
         </div>
         <div class="intro-item five">
-            <div class="intro-tit">这里是图片介绍5</div>
-            <div class="intro-det" style="display: block">
+            <div class="intro-tit fold" style="display: none">这里是图片介绍5</div>
+            <div class="intro-det unfold" style="display: block">
                 <p>这里是一些文字介绍</p>
             </div>
         </div>
@@ -313,6 +359,13 @@
         $('.carousel').carousel({
             interval: 2000
         });
+        $(function(){
+            $("#ul img").each(function(k,img){
+                new JumpObj(img,10);
+                //第一个参数代表元素对象
+                //第二个参数代表抖动幅度
+            });
+        });
         /*课程体系tab切换*/
         $('.tab-tit li').hover(function(){
             var divC = $('.tab-main .tab-item');
@@ -334,35 +387,37 @@
             divC.eq(eqC).css("display","block");
         });
         /*老师样式切换*/
-        $('.tea-intro .intro-item').hover(function(){
+        /*$('.tea-intro .intro-item').click(function(){
             $('.intro-item .intro-det').css("display","none");
             $(this).find(".intro-det").css("display","block");
             $('.tea-intro .intro-item').animate({"marginRight":"0"},0.5);
             $(this).animate({"marginRight":"190px"},0.5);
-        });
-        /*课堂简介图片抖动效果*/
-        $(".online-txt li").hover(function(){
-            $(this).find(".img-dd").addClass("add_transform");
-        },function () {
-            $(this).find(".img-dd").removeClass("add_transform");
-        });
-        /*鼠标经过区域效果*/
-        $('.online ,.appoint ,.course-box ,.inter-bk ,.teacher-box').hover(function(){
-            $(this).addClass("fadeInUp");
-        },function () {
-            $(this).removeClass("fadeInUp");
-        });
-        $('.record-zj').hover(function(){
-            $(this).addClass("fadeInRight");
-        },function () {
-            $(this).removeClass("fadeInRight");
-        })
+        });*/
+          /*  $(".tea-intro .intro-item").each(function(){
+                var fold = $(this).find(".fold");
+                var unfold = $(this).find(".unfold");
+                if(fold.is(":hidden")){
+                    $(this).width(150);
+                }else{
+                    $(this).width(150);
+                }
+            });*/
+            $(".tea-intro .intro-item").mouseover(function(){
+                var li_index = $(this).index();
+                    $(this).animate({width:150},0);
+                    $(this).find(".unfold").show();
+                    $(this).find(".fold").hide();
+                    $(this).siblings().animate({width:150},0);
+                    $(this).siblings().find(".unfold").hide();
+                    $(this).siblings().find(".fold").show();
+            });
     });
 
 </script>
 <!--表格-->
 <script>
     option = {
+        animation:true,
         xAxis: {
             type: 'category',
             axisLine:{
@@ -388,31 +443,57 @@
             }
 
         },
-        legend:{
-
-        },
         series: [{
             data: [25, 40, 30,40],
             type: 'line',
-            symbol: 'triangle',
-            symbolSize: 20,
+            symbol: 'circle',
+            symbolSize: 5,
             lineStyle: {
                 normal: {
-                    color: 'green',
+                    color: 'green',//线条颜色
                     width: 2
                 }
             },
             itemStyle: {
                 normal: {
+                    width:1,
                     borderWidth: 2,
-                    borderColor: 'yellow',
-                    color: 'red'
+                    borderColor: 'blue',
+                    color: 'white',
+                    opacity:0.6
                 }
             },
-            label:{
-                normal:{
-                    show:true
-                }
+            markPoint:{
+                symbolSize:'60',
+                label:{
+                    color:'green',//文字标注
+                    position:'inside',
+                    fontSize:14
+                },
+                itemStyle:{
+                    color:'yellow',//圆圈标注
+                    borderWidth:"0",
+                    shadow:'none'
+                },
+                data:[
+                    {
+                        value: "这里是我的第一段文字",
+                        x:160,
+                        y:170
+                    }, {
+                        value:"这里是测试文字",
+                        x:320,
+                        y:50
+                    }, {
+                        value:"这里是测试文字",
+                        x:480,
+                        y:130
+                    }, {
+                        value:"这里是测试文字",
+                        x:640,
+                        y:50
+                    }
+                ]
             }
         }]
     };
@@ -423,4 +504,3 @@
 
 
 </script>
-
