uipaie0306+胡梦+解决子页面出现滚动条的问题

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="HMcode_QD/HMjs/less.min.js" type="text/javascript"></script>
     <link href="HMcode_QD/HMcss/main.css" rel="stylesheet">
-    <!--<link href="HMcode_QD/HMless/style.css" rel="stylesheet">-->
+    <link href="HMcode_QD/HMless/style.css" rel="stylesheet">
     <style>
         .qt-block>div{
             display: none;
@@ -92,22 +92,22 @@
 <!--嵌套部分-->
 <div class="qt-block">
     <div id="one1">
-        <iframe id="ifr1ac" name="ifr1ac" style="width:100%;" onload="this.height=ifr1ac.document.body.scrollHeight" src="easyui_xpp/ZB_1a0.html" frameborder="0"></iframe>
+        <iframe id="ifr1ac"  name="ifr1ac" style="width:100%;" onload="this.height=ifr1ac.document.body.scrollHeight" src="easyui_xpp/ZB_1a0.html" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <div id="one">
-        <iframe id="ifr1a0" name="ifr1a0" style="width:100%" onload="this.height=ifr1a0.document.body.scrollHeight" src="easyui_xpp/ZB_1a1.html" frameborder="0"></iframe>
+        <iframe id="ifr1a0" name="ifr1a0" style="width:100%" onload="this.height=ifr1a0.document.body.scrollHeight" src="easyui_xpp/ZB_1a1.html" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <div id="two1">
-        <iframe id="ifr1a1" name="ifr1a1" style="width:100%;" onload="this.height=ifr1a1.document.body.scrollHeight"  frameborder="0"></iframe>
+        <iframe id="ifr1a1" name="ifr1a1" style="width:100%;" onload="this.height=ifr1a1.document.body.scrollHeight"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <div id="two2">
-        <iframe id="ifr1a2" name="ifr1a2"  style="width:100%;" onload="this.height=ifr1a2.document.body.scrollHeight"   frameborder="0"></iframe>
+        <iframe id="ifr1a2" name="ifr1a2"  style="width:100%;" onload="this.height=ifr1a2.document.body.scrollHeight" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <div id="three">
-        <iframe id="ifr1a3" name="ifr1a3"  style="width:100%;" onload="this.height=ifr1a3.document.body.scrollHeight"   frameborder="0"></iframe>
+        <iframe id="ifr1a3" name="ifr1a3"  style="width:100%;" onload="this.height=ifr1a3.document.body.scrollHeight" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <div id="four">
-        <iframe id="ifr1a4" name="ifr1a4"  style="width:100%;" onload="this.height=ifr1a4.document.body.scrollHeight" frameborder="0"></iframe>
+        <iframe id="ifr1a4" name="ifr1a4"  style="width:100%;" onload="this.height=ifr1a4.document.body.scrollHeight" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
 </div>
 <!--S--底部-->
