--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta name="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta charset="UTF-8">
     <title>树袋老师</title>
 
@@ -24,7 +25,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="HMcode_QD/HMjs/less.min.js" type="text/javascript"></script>
     <link href="HMcode_QD/HMcss/main.css" rel="stylesheet">
-    <link href="HMcode_QD/HMless/style.css" rel="stylesheet">
+    <!--<link href="HMcode_QD/HMless/style.css" rel="stylesheet">-->
     <style>
         .qt-block>div{
             display: none;
@@ -177,7 +178,6 @@
             $('#ifr1a4').attr("height",mm);
         }
         /*监听鼠标滚动事件*/
-        /*首页logo*/
         var online =  $("#ifr1ac").contents().find('.online').offset().top;
         var appoint =  $("#ifr1ac").contents().find('.appoint').offset().top;
         var course =  $("#ifr1ac").contents().find('.course-box').offset().top;
